frotend erro autentification y endpoint