@@ -10,7 +10,7 @@ import org.springframework.stereotype.Service;
 import pe.edu.upeu.turismospringboot.model.entity.Usuario;
 import pe.edu.upeu.turismospringboot.repository.UsuarioRepository;
 
-import java.util.List;
+import java.util.Collections;
 
 @Service
 @Primary
@@ -19,16 +19,21 @@ public class UsuarioDetailsService implements UserDetailsService {
 
     private final UsuarioRepository usuarioRepository;
 
-
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         Usuario user = usuarioRepository.findByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado"));
 
+        // Asegurar que el rol tenga el prefijo "ROLE_"
+        String rolFormateado = user.getRol().getNombre();
+        if (!rolFormateado.startsWith("ROLE_")) {
+            rolFormateado = "ROLE_" + rolFormateado;
+        }
+
         return new org.springframework.security.core.userdetails.User(
                 user.getUsername(),
                 user.getPassword(),
-                List.of(new SimpleGrantedAuthority(user.getRol().getNombre())) // 👈 Esto debe ser "ROLE_USUARIO"
+                Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.getRol().getNombre().replace("ROLE_", "")))
         );
     }
-    }
+}
